--- a/styles.css
+++ b/styles.css
@@ -1,2 +1,9 @@
 
 /* Your CSS Code here. */
+.holder{
+	display: grid;
+	size: 200px;
+	 grid-template-columns: repeat(2, 1fr);
+	 grid-template-: repeat(2, 1fr);
+
+	} 
